@@ -1,5 +1,5 @@
-DIST maven-plugin-descriptor-2.0.tar.bz2 41302 RMD160 4b63055144a66fb68acacecd02d35c7363e533e9 SHA1 66a5f679412d57c40b46d926547d59a7101b0a51 SHA256 d863d831a68b1aead27454755c53a614b243804198f5f65b199e87d8a4434059
-DIST maven-plugin-descriptor-gen-src-2.0.tar.bz2 6002 RMD160 b145e08f62392fc417b042e6a045d0526796788e SHA1 2aa6d89e68d134ac5a147b316eac5603f59a473f SHA256 8ff8445ab475b4bcee2c9af6f8c14c1e118e9e837a0a18fa0a0be50e6b29b2a8
-EBUILD maven-plugin-descriptor-2.0.ebuild 751 RMD160 b1a0d96c2e62888bcf274954408ac768ad33e830 SHA1 c5f15ccabd01b38ae69241232f016a69b7c20738 SHA256 f23ae45570f0db2a964e65895742079dce1866844e1cd2fd110dec0bc399684f
-MISC ChangeLog 623 RMD160 4ab9ce85729fe9b8c3370fa011a161b946154c13 SHA1 709e48d1adad7880b9aaf2d3735624b1e711e734 SHA256 81f8f2388778235e316a044dc1daf04cd0b38e45a587a5c0c87e41d4b15d1fd5
+DIST maven-plugin-descriptor-2.1_pre20070611-gen-src.tar.bz2 5975 RMD160 cdebac633baef17eb2cb4b195ff736a731b19ca4 SHA1 670db84b0f82051f8ae0e4c6b2bd46d351470b17 SHA256 a734b10e933ad95acc34a9952ed84be0da7fb8731ef045c20d9cdc0ac92af5ef
+DIST maven-plugin-descriptor-2.1_pre20070611.tar.bz2 14702 RMD160 f3e848e3881f746bdf8b87bd0e66692f0ba5db81 SHA1 96546bfaa9ac89f7de7c0d0145664a69c4a7e00c SHA256 92ef61de7e2bc01a2fa2aa705b220d98ee2953b85cc9ae532075416f78933e9e
+EBUILD maven-plugin-descriptor-2.1_pre20070611.ebuild 843 RMD160 ac3db3f8d1b27a53530fe9b516905e4fb7f3c6c3 SHA1 dd82f59f61107a4c8cd8627e94bf8e6ba31d4fe4 SHA256 e299acaca2c9a339beb0d0827b2efc153ada9b71584158d08ffb4d397aa81a47
+MISC ChangeLog 777 RMD160 e521c84f1d1b4c57a234452df90e6bd93d873293 SHA1 d5478f5e4e237cefc4606fdb72fd700c9095932c SHA256 91e5c647bc580ff8c056b0617611f9d49cb6d4eb8b6a0600ce3e438d69a08012
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
