@@ -3,7 +3,7 @@
 # $Header: $
 
 JAVA_PKG_IUSE="source doc"
-IS_MODELLO_EBUILD="y"
+JAVA_MAVEN_ADD_GENERATED_STUFF="y"
 JAVA_MAVEN_BOOTSTRAP="Y"
 inherit java-maven-2
 
@@ -13,18 +13,26 @@ LICENSE="Apache-2.0"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
-DEP="dev-java/maven-artifact
-dev-java/maven-plugin-api
-=dev-java/plexus-container-default-1.0_alpha9
+DEP="
 =dev-java/classworlds-1.1*
+dev-java/maven-artifact
+dev-java/maven-plugin-api
+dev-java/plexus-classworlds
+dev-java/plexus-component-api
+dev-java/plexus-container-default
 dev-java/plexus-utils
-dev-java/xpp3"
+dev-java/xpp3
+"
 DEPEND=">=virtual/jdk-1.4 ${DEP}"
 RDEPEND=">=virtual/jre-1.4 ${DEP}"
-JAVA_MAVEN_CLASSPATH="maven-artifact
-maven-plugin-api
-plexus-container-default-1.0_alpha9
+JAVA_MAVEN_CLASSPATH="
 classworlds-1.1
+maven-artifact
+maven-plugin-api
+plexus-classworlds
+plexus-component-api
+plexus-container-default
 plexus-utils
-xpp3"
+xpp3
+"
 
